@@ -140,7 +140,7 @@ android {
         applicationId "com.yomamobile"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 19
+        versionCode 24
         versionName "0.0.1"
         multiDexEnabled true
     }
