@@ -1,2 +1,2 @@
 export type StdObj<T = any> = Record<string, T>
-export type StdFn<T = any, R = void> = (args: T) => R
+export type StdFn<T = any, R = void> = (args: T, identifier?: string) => R
