@@ -2,7 +2,7 @@ import * as SUT from './redux.utils'
 
 describe('src/utils/redux.utils', () => {
   describe('normalise', () => {
-    it('should take a list of objects with an id key and return an object with a normalised shape', () => {
+    it('should take a list of objects with an id and return an object with a normalised shape', () => {
       // given ...
       const data = [
         {
@@ -11,10 +11,6 @@ describe('src/utils/redux.utils', () => {
         },
         {
           id: 'id2',
-          other: 'OTHER OTHER DATA',
-        },
-        {
-          key: 'id3',
           other: 'OTHER OTHER DATA',
         },
       ]
@@ -32,12 +28,38 @@ describe('src/utils/redux.utils', () => {
             id: 'id2',
             other: 'OTHER OTHER DATA',
           },
-          id3: {
-            key: 'id3',
+        },
+        ids: ['id1', 'id2'],
+      })
+    })
+    it('should take a list of objects with a key and return an object with a normalised shape', () => {
+      // given ...
+      const data = [
+        {
+          key: 'key1',
+          other: 'OTHER DATA',
+        },
+        {
+          key: 'key2',
+          other: 'OTHER OTHER DATA',
+        },
+      ]
+      // when ...
+      const result = SUT.normalise(data, 'key')
+
+      // then ...
+      expect(result).toEqual({
+        entities: {
+          key1: {
+            key: 'key1',
+            other: 'OTHER DATA',
+          },
+          key2: {
+            key: 'key2',
             other: 'OTHER OTHER DATA',
           },
         },
-        ids: ['id1', 'id2', 'id3'],
+        ids: ['key1', 'key2'],
       })
     })
   })
