@@ -1,13 +1,14 @@
-import { applySpec, has, identity, ifElse, keys, path, pipe, prop } from 'ramda'
+import { applySpec, identity, keys, path, pipe, prop } from 'ramda'
 
 import { objFromListWith } from './ramda.utils'
 
-export const normalise = pipe(
-  objFromListWith(ifElse(has('key'), prop('key'), prop('id'))),
-  applySpec({
-    entities: identity,
-    ids: keys,
-  }),
-)
+export const normalise = (data: any, identifier = 'id') =>
+  pipe(
+    objFromListWith(prop(identifier)),
+    applySpec({
+      entities: identity,
+      ids: keys,
+    }),
+  )(data)
 
 export const extractDataFromPayload = path(['payload', 'data', 'data'])
